--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </nav>
         <div class="hero">
             <h1>World's Biggest University</h1><br>  
-            <p>Lorem ipsum dolor sit amet. Et necessitatibus ipsa sit quaerat tenetur est omnis ipsum aut corrupti <br> saepe et facilis provident vel laboriosam similique qui fugit suscipit.</p><br>
+            <p>Lorem ipsum dolor sit amet. Et necessitatibus ipsa sit quaerat tenetur est omnis <br> ipsum aut corrupti  saepe et facilis provident vel laboriosam similique qui fugit suscipit.</p><br>
             <a href="" class="btn_1" >Apply</a> 
         </div>
     </section>
